# data-science-krko

./: .gitignore  Makefile  README.md  pyproject.toml
models/: model_(64, 32)_0.keras  model_0_0.h5  model_128_128_128_128_128_128_32_0.0001.keras  model_128_128_128_128_128_128_32_0.001.keras  model_128_128_128_128_128_128_32_0.01.keras  model_64_32_0.0001.keras  model_64_32_0.001.keras  model_64_32_0.01.keras  model_64_64_64_32_0.0001.keras  model_64_64_64_32_0.001.keras  model_64_64_64_32_0.01.keras
reports/: results.csv
src/: config.py  dataset.py  plots.py  test.py
src/modeling/: train.py  train_ffnn.py  train_randomsearch_cv.py
src/models/: ffnn.py  random_search.py
