[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "jupyter>=1.1.1",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "ruff>=0.6.9",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
]
